--- a/DespidoTexto/src/IncTemp/IncapacidadTemporal.form
+++ b/DespidoTexto/src/IncTemp/IncapacidadTemporal.form
@@ -159,7 +159,7 @@
                       <Component id="jLabel9" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="txtDiasTramoDos" min="-2" pref="60" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
@@ -202,12 +202,14 @@
                               <Component id="jTextField10" pref="60" max="32767" attributes="0"/>
                               <Component id="jLabel12" max="32767" attributes="0"/>
                           </Group>
-                          <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="jSlider1" min="-2" max="-2" attributes="0"/>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <EmptySpace min="-2" pref="63" max="-2" attributes="0"/>
+                              <Group type="102" attributes="0">
+                                  <EmptySpace min="-2" pref="69" max="-2" attributes="0"/>
                                   <Component id="jLabel13" min="-2" pref="103" max="-2" attributes="0"/>
+                              </Group>
+                              <Group type="102" attributes="0">
+                                  <EmptySpace max="-2" attributes="0"/>
+                                  <Component id="jSlider1" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -328,14 +330,23 @@
         </Component>
         <Component class="javax.swing.JSlider" name="jSlider1">
           <Properties>
-            <Property name="paintLabels" type="boolean" value="true"/>
+            <Property name="value" type="int" value="0"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JSlider" name="jSlider2">
+          <Properties>
+            <Property name="value" type="int" value="60"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JSlider" name="jSlider3">
+          <Properties>
+            <Property name="value" type="int" value="60"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JSlider" name="jSlider4">
+          <Properties>
+            <Property name="value" type="int" value="75"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel9">
           <Properties>
@@ -367,7 +378,7 @@
     <Component class="javax.swing.JButton" name="btnSalirIT">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/iconsets/1411650565_exit.png"/>
+          <Image iconType="3" name="/iconsets/icon_salir.png"/>
         </Property>
       </Properties>
       <Events>
